# isbell-engine

./: .gitignore  CMakeLists.txt  README.md  example.lane  isbell.code-workspace  main.hs  premake5.lua  rebuild.bat  submodule-push.bat
.github/: copilot-instructions.md
cmake/: cmake_workspace.lua
config/: build_config.lua  config.json
engine/: indexedRendering.cpp  indexedRendering.hpp  renderingUtils.cpp
engine/sdf-rendering/: SDFObjects.cpp  SDFObjects2.hpp
file-management/: configFiles.hpp  filesUtils.cpp  filesUtils.hpp  macroParsing.hpp
include/utils/: colors.hpp  exceptions.hpp  flows.hpp  formatters.hpp
main_renders/: curvatures.cpp  curvesDemo.cpp  geoDisplace.cpp  hyperbolicAut.cpp  hyperbolicTesselation.cpp  implicitGallery.cpp  indCurves.cpp  oscilatingCircle.cpp  polygons.cpp  vaoTest.cpp
physics/: generic.hpp
premake/cmake/: cmake_project.lua  cmake_workspace.lua
src/: VFarrows.cpp  bezier.cpp  config.txt  coons.cpp  curvatureFlow.cpp  curvatures.cpp  curves.cpp  curvesDemo.cpp  differentHyperbolic.cpp  flowArt.cpp  flows.cpp  gabor.cpp  geoDisplace.cpp  geoDisplaceVert.cpp  guitar.cpp  harmonicCompletion.cpp  heatFlow.cpp  hyperbolicAut.cpp  hyperbolicTesselation.cpp  implicitGallery.cpp  indCurves.cpp  marchingCubes.cpp  oscilatingCircle.cpp  pdeSolving.cpp  polygons.cpp  revolution.cpp  rolling.cpp  stringCyg.cpp  vaoTest.cpp
src/.tests/: discrete_func_tests.cpp
src/SDF/: softShadows.cpp  subsurfaceScattering.cpp  water.cpp
src/SDF/common/: SDFObjects.cpp  SDFObjects.hpp  SDFRendering.cpp  SDFRendering.hpp
src/common/: buffer_utils.cpp  buffer_utils.hpp  concepts.hpp  filesUtils.cpp  filesUtils.hpp  func.cpp  func.hpp  geometry.cpp  geometry.hpp  glmUX.hpp  glsl_utils.cpp  glsl_utils.hpp  hyperbolic.cpp  hyperbolic.hpp  indexedGeometry.cpp  indexedGeometry.hpp  indexedRendering.cpp  indexedRendering.hpp  interface.cpp  macros.hpp  mat.cpp  mat.hpp  metaUtils.hpp  renderingUtils.cpp  renderingUtils.hpp  solvers.hpp  specific.cpp  specific.hpp  surfaces.cpp  surfaces.hpp
src/core/application/: application.cpp  events.cpp  layers.cpp  window.cpp
src/core/controllers/: accumulators.cpp  cameraControllers.cpp  controllers.cpp
src/core/engine/: UILayers.cpp  buffers.cpp  clock.cpp  dynamicMesh.cpp  dynamicalSystems.cpp  glCommand.cpp  glslUtils.cpp  indexedRendering.cpp  mesh3D.cpp  planarMesh.cpp  renderLayer.cpp  renderLayers.cpp  renderer.cpp  renderingUtils.cpp  scene3D.cpp  sceneRendering.cpp  shaders.cpp  specific.cpp  textures.cpp  uniforms.cpp  window.cpp
src/core/events/: event.cpp  eventQueue.cpp  listeners.cpp
src/core/file-management/: configFiles.cpp  macroParsing.cpp  shaderGenerator.cpp
src/core/geometry/: complexGeo.cpp  discreteGeometry.cpp  glslUtils__dep.cpp  indexedRendering.cpp  planarGeometry.cpp  renderingUtils.cpp  smoothImplicit.cpp  smoothParametric.cpp  sph.cpp
src/core/include/: isbell.hpp
src/core/openglAPI/: buffersOpenGL.cpp  computeShaders.cpp  openglRenderer.cpp  shadersOpenGL.cpp
src/core/physics/: rigid.cpp  solidMeshes.cpp
src/core/renderer/: buffers.cpp  dynamicMesh.cpp  renderLayer.cpp  renderer.cpp  scene3D.cpp  shaders.cpp  uniforms.cpp
src/core/utils/: func.cpp  logging.cpp  mat.cpp
src/engine/: bufferUtils.cpp  bufferUtils.hpp  buffer_utils.cpp  dynamicalSystems.hpp  glslUtils.cpp  glslUtils.hpp  glsl_utils.cpp  glsl_utils.hpp  indexedRendering.cpp  indexedRendering.hpp  interface.hpp  renderingUtils.cpp  renderingUtils.hpp  specific.cpp  specific.hpp
src/engine/sdf-rendering/: SDFObjects.hpp  SDFRendering.cpp
src/fundamentals/: concepts.hpp  distributions.cpp  distributions.hpp  filesUtils.cpp  filesUtils.hpp  flows.cpp  flows.hpp  func.cpp  func.hpp  integralTransforms.cpp  integralTransforms.hpp  macros.hpp  mat.cpp  mat.hpp  metaUtils.hpp  monads.hpp  prob.hpp  solvers.cpp  solvers.hpp  symbolic.cpp
src/geometry/: complexGeo.cpp  complexGeo.hpp  discreteGeometry.cpp  discreteGeometry.hpp  hyperbolic.cpp  hyperbolic.hpp  pde.cpp  pde.hpp  pde_dicrete.cpp  pde_dicrete.hpp  planarGeometry.cpp  planarGeometry.hpp  smoothImplicit.cpp  smoothImplicit.hpp  smoothParametric.cpp  smoothParametric.hpp  sph.cpp  sph.hpp
src/isbell/engine/: dynamicalSystems.cpp  glslUtils.hpp  renderingUtils.hpp
src/isbell/file-management/: filesUtils.cpp  filesUtils.hpp  windowsUtils.cpp
src/isbell/physics/: rigid.cpp
src/isbell/utils/: flows.cpp  func.cpp  macros.hpp  mat.hpp  metaUtils.hpp
src/openglAPI/: bufferUtils.cpp  bufferUtils.hpp  computeShaders.hpp  openglRenderer.cpp  openglRenderer.hpp
src/physics/: fluids.cpp  fluids.hpp  fluidsSpecific.cpp  fluidsSpecific.hpp  generic.cpp  generic.hpp  rigid.cpp  rigid.hpp  solidMeshes.cpp  solidMeshes.hpp
src/poe2/: poe.cpp  poe.hpp
src/render-projects/: domains.cpp  fluids.cpp  foliatedTorus.cpp  gabor.cpp  guitar.cpp  harmonicCompletion.cpp  impulsiveInteractions.cpp  isbell-2.0-demo.cpp  newRendererTest.cpp  palettes.cpp  stringCyg.cpp  zero.cpp  zerodiv.cpp
src/shaders/: curvaCircle.frag  curvaCircle.vert  hyperbolicAut.frag  hyperbolicAut.vert  rev.frag  vaoTest.frag
src/shaders2/: curve.vert  flowart.frag  guitar.frag  guitar.vert  heat.frag  shadingDemo.frag
src/shading/: buffer_utils.cpp  buffer_utils.hpp  glsl_utils.cpp  glsl_utils.hpp  indexedRendering.cpp  indexedRendering.hpp  renderingUtils.cpp  renderingUtils.hpp  specific.cpp  specific.hpp
src/tests/: discreteFuncTests.cpp  discreteFuncTests.hpp  discrete_func_tests.cpp  experimentalTests.hpp  filesystemTests.cpp  filesystemTests.hpp  formattersTests.hpp  hyperbolicTests.cpp  hyperbolicTests.hpp  hyperbolic_tests.cpp  quatGLSLModuleTests.hpp  runTests.cpp  shaderParsingTests.hpp  unittests.hpp
src/utils/: colors.hpp  concepts.hpp  exceptions.hpp  filesUtils.cpp  filesUtils.hpp  func.cpp  func.hpp  integralTransforms.cpp  integralTransforms.hpp  logging.cpp  logging.hpp  macros.hpp  mat.cpp  mat.hpp  metaUtils.hpp  modules.hpp  symbolic.hpp
utils/: colors.hpp  concepts.hpp  logging.cpp  macros.hpp  mat.cpp  mat.hpp  metaUtils.hpp  stringUtils.hpp
(+115 files in other folders)
